force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Midwest Machinery STL</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery KC</fullName>
            </value>
            <value>
                <fullName>Midwest Machinery OK</fullName>
            </value>
            <value>
                <fullName>Engineered Products</fullName>
            </value>
            <value>
                <fullName>MaRRS</fullName>
            </value>
            <value>
                <fullName>Midwest Industrial Builders</fullName>
            </value>
            <value>
                <fullName>Spark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>