force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Sales_Order__r.AcctSeedERP__Opportunity__r.Id, 
IF(Sales_Order__r.AcctSeedERP__Opportunity__r.Id == &apos;&apos;,Name, Sales_Order__r.AcctSeedERP__Opportunity__r.Name),
 &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>