force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/PO_Custom_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Custom_Number__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Id, 
IF(Purchase_Order_Number__c == &apos;&apos;,Name, Purchase_Order_Number__c),
 &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Number</label>
    <type>Text</type>
</CustomField>