force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company__c</fullName>
    <label>Shipping Company</label>
    <type>TextArea</type>
</CustomField>