force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <formula>Sales_Order__r.Shipping_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Name</label>
    <type>Text</type>
</CustomField>